changes for online API

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,16 @@
       "justMyCode": true,
       "args": ["-myID", "1", "-r 20"],
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "name": "Python: API",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}//API//annallAPI.py",
+      "console": "integratedTerminal",
+      "justMyCode": true,
+      //   "args": [""],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
