conf file used in API for IP address and main for number of active writers

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-  "no_writers_set": 2,
-  "NO_permitted_writers": 5,
+  "no_active_writers": 2,
+  "no_permitted_writers": 5,
   "active_writer_set": [
     {
       "id": 1,
