--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ __pycache__/
 .DS_Store
 API/test_api_client_websockets.py
 API/test_writer_server_websockets.py
-/src/config.json
+src/config.json
 src/test_dict_json.py
