--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
       "cwd": "${workspaceFolder}"
     },
     {
-      "name": "Python: API",
+      "name": "Python: ClientAPI",
       "type": "python",
       "request": "launch",
       "program": "${file}",
