node set separated by ids in writer_set_id_list. In protocom, the nodes connect to readers and writers.

--- a/WriterAPI/config-remote.json
+++ b/WriterAPI/config-remote.json
@@ -1,7 +1,7 @@
 {
   "no_active_writers": 2,
   "no_permitted_writers": 2,
-  "writer_set": [
+  "node_set": [
     {
       "name": "writer_1",
       "id": 1,
