Fixed so it runs

--- a/src/config-local.json
+++ b/src/config-local.json
@@ -51,7 +51,7 @@
     }
   ],
   "active_writer_set_id_list": [1, 2],
-  "active_reader_set_id_list": [3, 4],
+  "active_reader_set_id_list": [],
   "NO_coord": 1,
   "modulus": 65537,
   "version": "1.0"
