blockchain runs with readers and writers

--- a/src/config-local.json
+++ b/src/config-local.json
@@ -59,7 +59,7 @@
     }
   ],
   "active_writer_set_id_list": [1, 2],
-  "active_reader_set_id_list": [],
+  "active_reader_set_id_list": [3],
   "NO_coord": 1,
   "modulus": 65537,
   "version": "1.0"
