blockchain not in working state. Rounds are cancelled and the program is very slow
In main, the node tries to get the data from the writer api but otherwise runs with its local files. In protoengine, writers check for updates to config, connect to everyone, and add missing blocks before starting up. Every 20 rounds the nodes update and join again to the writer set. Before every round starts, the nodes check for changes to the active nodes list.

--- a/src/config-local.json
+++ b/src/config-local.json
@@ -58,7 +58,7 @@
       "protocol_port": 15007
     }
   ],
-  "active_writer_set_id_list": [1, 2],
+  "active_writer_set_id_list": [1, 2, 4],
   "active_reader_set_id_list": [3],
   "NO_coord": 1,
   "modulus": 65537,
