added class membershipdata for config. writer api renamed to node api.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,7 +65,7 @@
       "cwd": "${fileDirname}"
     },
     {
-      "name": "Python: WriterAPI",
+      "name": "Python: NodeAPI",
       "type": "python",
       "request": "launch",
       "program": "${file}",
