--- a/config-local.json
+++ b/config-local.json
@@ -58,13 +58,18 @@
             "protocol_port": 15007
         }
     ],
-    "active_writer_set_id_list": [
+    "writer_list": [
         1,
-        2,
-        4
+        2
     ],
-    "active_reader_set_id_list": [
+    "reader_list": [
         3
+    ],
+    "waiting_list": [
+        [
+            50,
+            false
+        ]
     ],
     "NO_coord": 1,
     "modulus": 65537,
