--- a/src/WriterAPI/config-local.json
+++ b/src/WriterAPI/config-local.json
@@ -90,8 +90,8 @@
       "protocol_port": 15011
     }
   ],
-  "active_writer_set_id_list": [1, 2],
-  "active_reader_set_id_list": [3],
+  "writer_list": [1, 2],
+  "reader_list": [3],
   "NO_coord": 1,
   "modulus": 65537,
   "version": "1.0"
