--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
+attrs==22.1.0
+certifi==2022.6.15
+chardet==3.0.4
+click==8.1.3
+Flask==2.2.2
+idna==2.10
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+more-itertools==8.14.0
+mpmath==1.2.1
+packaging==21.3
+pluggy==0.13.1
+py==1.11.0
+pyparsing==3.0.9
 pytest==5.4.3
-wheel==0.34.2
 requests==2.24.0
+sympy==1.11
+urllib3==1.25.11
+wcwidth==0.2.5
+Werkzeug==2.2.2
+zipp==3.8.1
