added more detailed documentation about the client api and running the program

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ ClientAPI/test_writer_server_websockets.py
 src/test_dict_json.py
 /src/config.json
 src/test_json.py
+ClientAPI/clientApiDocumentation.html
