--- a/src/config-remote.json
+++ b/src/config-remote.json
@@ -29,8 +29,8 @@
       ]
     }
   ],
-  "active_writer_set_id_list": [1, 2],
-  "active_reader_set_id_list": [],
+  "writer_list": [1, 2],
+  "reader_list": [],
   "NO_coord": 1,
   "modulus": 65537,
   "version": "0.2"
