--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ src/test_dict_json.py
 /src/config.json
 src/test_json.py
 ClientAPI/clientApiDocumentation.html
+src/config-writer-api-update.json
