fixed behavior for handling json with null values

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/test_dict_json.py
 src/test_json.py
 ClientAPI/clientApiDocumentation.html
 src/config-writer-api-update.json
+src/config-writer-api-update.json
