--- a/Dockerfile.prod1
+++ b/Dockerfile.prod1
@@ -1,7 +1,7 @@
 FROM python:3.8-slim-buster
 USER root
-COPY ../requirements.txt requirements.txt
-EXPOSE 5001 15000
+COPY requirements.txt requirements.txt
+EXPOSE 5000 15000
 RUN pip3 install -r requirements.txt
 COPY . /app
 WORKDIR /app
