--- a/Dockerfile.dev1
+++ b/Dockerfile.dev1
@@ -5,4 +5,4 @@ EXPOSE 5001 15000
 RUN pip3 install -r requirements.txt
 COPY . /app
 WORKDIR /app
-ENTRYPOINT ["../scripts/ss1-local-docker.sh"]
+ENTRYPOINT ["scripts/ss1-local-docker.sh"]
