--- a/Dockerfile.dev2
+++ b/Dockerfile.dev2
@@ -1,6 +1,6 @@
 FROM python:3.8-slim-buster
 USER root
-COPY ../requirements.txt requirements.txt
+COPY requirements.txt requirements.txt
 EXPOSE 5002 15001
 RUN pip3 install -r requirements.txt
 COPY . /app
