adjusted APIs for node start-up and added activation and deactivation endpoint. started on blockchain downloader.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,11 +48,11 @@
       "name": "Python: WriterAPI",
       "type": "python",
       "request": "launch",
-      "program": "${file}",
+      "program": "${workspaceFolder}//src//WriterAPI//wsgiDev.py",
       "console": "integratedTerminal",
       "justMyCode": true,
       //   "args": [""],
-      "cwd": "${fileDirname}"
+      "cwd": "${workspaceFolder}//src//WriterAPI"
     },
     {
       "name": "Python: GMain",
